k8s/01-mongo.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongo
  namespace: mern-project
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0
          ports: 
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
          
---
apiVersion: v1
kind: Service 
metadata:
  name: mongo
  namespace: mern-project
spec: 
  selector:
    app: mongo
  ports: 
    - port: 27017
      targetPort: 27017
  type: ClusterIP
