k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend
  namespace: mern-project
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels: 
        app: frontend
    spec: 
      containers:
        - name: frontend
          image: frontend:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173

---
apiVersion: v1
kind: Service 
metadata:
  name: frontend
  namespace: mern-project
spec:
  selector:
    app: frontend 
  ports:
    - port: 5173
  type: ClusterIP
